@@ -131,6 +131,15 @@ U stop reply
   they did not respond.  The remote stub reports support for this stop reply to
   GDB's qSupported query.
 
+e
+
+  Fetch the "expedited" registers from the remote target.  These are
+  the registers that are deemed the most important by the target and
+  are typically the same as those sent in a 'T' stop reply packet.
+  The 'e' packet is can be an alternative to the 'g' packet to reduce
+  the transfer overhead between GDB and the remote target when the
+  complete register file of a thread is large.
+
 * Changed remote packets
 
 qXfer:features:read:target.xml
